# darkmode

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: detect.rs  subscribe.rs
src/: lib.rs
